# bi-doc-maker

./: .gitignore  EXEMPLO_DAX_DOCUMENTACAO.md  GUIA_RAPIDO.md  Iniciar_Documentador.bat  LICENSE  README.en.md  README.md  build-windows.ps1  documentador_core_cli.py  documentador_gui.py  documentador_models.py  documentador_pbip.py  exemplos_uso.py  i18n.py  icons.py  rebuild-pyinstaller.ps1  regex_opt.py  requirements.txt  setup.bat  setup.ps1  setup.sh  split_models.py  version-info.txt
.github/workflows/: pages.yml
frond-end-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frond-end-app/.github/: copilot-instructions.md
frond-end-app/src/: App.svelte  app.css  i18n.ts  main.ts
frond-end-app/src-tauri/: Cargo.toml  tauri.conf.json
frond-end-app/src-tauri/icons/: icon.icns
frond-end-app/src-tauri/src/: main.rs
frond-end-app/src/lib/: docx.ts  html.ts  markdown.ts
frond-end-app/src/messages/: en-US.ts  pt-BR.ts
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website/src/: i18n.js  main.js  style.css
winget/: README.md
winget/manifests/m/MathRosa/BIDocMaker/0.9.2/: MathRosa.BIDocMaker.installer.yaml  MathRosa.BIDocMaker.locale.en-US.yaml  MathRosa.BIDocMaker.locale.pt-BR.yaml  MathRosa.BIDocMaker.yaml
