[package]
name = "frond-end-app"
version = "0.1.0"
description = "BI Doc Maker desktop shell"
authors = ["Math Rosa"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = [ "dialog-open", "process-command-api"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
