[package]
name = "frond-end-app"
version = "0.9.4"
description = "BI Doc Maker desktop shell"
authors = ["Math Rosa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = [ "dialog-open", "process-command-api"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
